src/app/chat/style.css
.main-container {
  display: grid;
  grid-template-columns: 2fr 9fr;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}
.profile {
  width: 80px;
  height: auto;
}
#contact-avatar {
  width: 80%;
  height: 100%;
}
.chat {
  margin: 10px;
  padding: 5px;
  position: relative;
  overflow: hidden;
  display: grid;
  grid-template-rows: 1fr 50fr 10fr;
}
.send-part {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 50px;
  display: grid;
  grid-template-columns: 10fr 1fr;
}
.send-part textarea {
  border: 1px solid rgb(3, 3, 30);
}
.contact-li {
  display: grid;
  grid-template-columns: 2fr 5fr;
  padding: 10px;
  border: 1px dashed #047566;
}
.contact-li:hover {
  background-color: #48c773;
}

.contact-image {
  position: relative;
  width: 80%;
  height: 100%;
  padding: 10px;
}
.people-list {
  background-color: #0cb39d;
  overflow: scroll;
}
.chat-history {
  overflow-y: scroll;
}
.chat-header {
  display: grid;
  grid-template-columns: 1fr 100fr 1500fr;
}
.message-li {
  padding: 10px;
  overflow: hidden;
  margin: 10px;
  display: block;
}
.message-li p {
  width: fit-content;
  color: black;
  padding: 10px 20px;
  border-radius: 5rem;
}

.message-text {
  display: block;
  background-color: yellow;
  width: fit-content;
  border-radius: 1rem;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
}
.active {
  background-color: #48c773;
}
#back-to-contacts {
  display: none;
}
@media screen and (min-width: 750px) {
  .chat-list {
    display: none;
  }
}
@media screen and (max-width: 750px) {
  .main-container {
    display: grid;
    grid-template-columns: 1fr;
  }
  .chat {
    width: 100%;
  }
  #back-to-contacts {
    display: inline-block;
    width: 50%;
    height: auto;
    margin-top: 10%;
  }
  .people-list {
    display: none;
  }
  .chat-header {
    display: grid;
    grid-template-columns: 1fr 2fr 10fr;
  }
  .chat-list {
    background-color: rgb(40, 3, 139);
  }
  .original-contact-item {
    display: grid;
    grid-template-columns: 2fr 5fr;
    padding: 5px;
    margin: 3px;
    background-color: rgb(30, 92, 192);
  }

  .chat-list img {
    width: 100%;
  }
  .chat-list div {
    padding: 5px;
    text-align: center;
  }
  .chat-list h1 {
    font-size: xx-large;
  }
  .original-contact-item .about {
    display: grid;
    grid-template-rows: 1fr 1fr;
  }
}

